--- a/res/css/LoginFrame.css
+++ b/res/css/LoginFrame.css
@@ -6,6 +6,8 @@ GtkFrame {
 	background-image: url( "../img/bg_login.jpg" );
 	background-size: 100%;
 	font-weight: 500;
+	border: none;
+	border-radius: 0;
 }
 
 GtkGrid {
@@ -25,7 +27,7 @@ GtkEntry {
 	color: #00CC00;
 }
 
-#button-login {
+#button-login, GtkButton {
 	border-radius: 0px;
 	background: rgba( 0, 0, 0, 0.7 );
 	border: 1px solid #00CC00;
@@ -35,4 +37,16 @@ GtkEntry {
 #button-login:hover {
 	background: #00CC00;
 	color: rgba( 0, 0, 0, 0.8 );
+}
+
+GtkButton:hover {
+	background: #00CC00;
+	color: rgba( 0, 0, 0, 0.8 );
+}
+
+/* Message Dialog */
+GtkMessageDialog {
+	border: 1px solid #00CC00;
+	background: rgba( 0, 0, 0, 0.7 );
+	color: #00CC00;
 }
