[WIP] LoginFrame disabled, Character select allows selecting characters to view their info, finished layout, implemented character lists on server side

--- a/res/css/components/_Button.css
+++ b/res/css/components/_Button.css
@@ -10,3 +10,8 @@ GtkButton:hover {
 	background: @color_main_green;
 	color: rgba( 0, 0, 0, 0.8 );
 }
+
+GtkButton:insensitive {
+	color: #00CC00;
+	opacity: 0.3;
+}
