[WIP] login enabled back, login now leads to char select, can now log out of char select

--- a/res/css/main.css
+++ b/res/css/main.css
@@ -16,6 +16,7 @@ GtkWindow {
 
 #window-character {
 	background-image: url( "../img/bg_char.jpg" );
+/*	background-image: url( "../img/bg_anim_char.gif" );*/
 }
 
 GtkFrame {
