--- a/res/css/util/_Color.css
+++ b/res/css/util/_Color.css
@@ -1,1 +1,4 @@
 @define-color color_main_green #00CC00;
+@define-color color_main_red #feda4f;
+@define-color color_main_blue #f3a3f8;
+@define-color color_main_black #0d7cb1;
