--- a/res/css/util/_Color.css
+++ b/res/css/util/_Color.css
@@ -2,3 +2,4 @@
 @define-color color_main_red #feda4f;
 @define-color color_main_blue #f3a3f8;
 @define-color color_main_black #0d7cb1;
+@define-color color_main_black1 #000000;
